[gd_scene load_steps=33 format=3 uid="uid://dtdxci7x1k0rv"]

[ext_resource type="PackedScene" uid="uid://b14y0y3gumgas" path="res://Scenes/player_battle.tscn" id="1_b71gs"]
[ext_resource type="Script" path="res://Scripts/TurnManager.gd" id="1_u86fr"]
[ext_resource type="Script" path="res://Scripts/Global.gd" id="2_u6m27"]
[ext_resource type="Texture2D" uid="uid://doefv7c1mkxn6" path="res://Character Art/Main Character/Spritesheet/PlayerBattle.png" id="3_epf44"]
[ext_resource type="Resource" uid="uid://0wuym672c22b" path="res://Combat Actions/Attack.tres" id="3_uefjw"]
[ext_resource type="Resource" uid="uid://demysvi5r04iw" path="res://Combat Actions/Heal.tres" id="4_v045b"]
[ext_resource type="Resource" uid="uid://b6tw7vev43rui" path="res://Combat Actions/Fire.tres" id="5_554og"]
[ext_resource type="Resource" uid="uid://di5q03gmu1tk" path="res://Combat Actions/RegenMana.tres" id="6_285r8"]
[ext_resource type="Resource" uid="uid://cjo7dk61hukh8" path="res://Combat Actions/Stand.tres" id="8_yu712"]
[ext_resource type="Script" path="res://Scripts/BattlePanel.gd" id="9_m50kj"]
[ext_resource type="Script" path="res://Scripts/playerui.gd" id="9_x401x"]
[ext_resource type="Script" path="res://Scripts/CombatActionButton.gd" id="10_61c8a"]
[ext_resource type="AudioStream" uid="uid://cfn4mbagvmmea" path="res://Music/Fight 1.ogg" id="10_aknwo"]
[ext_resource type="AudioStream" uid="uid://ie1on1m2yfr8" path="res://Music/8-bit RPG Music Game Over.ogg" id="11_3h8lf"]
[ext_resource type="AudioStream" uid="uid://ssoe142aert" path="res://Music/8-bit RPG Music Victory Theme.ogg" id="12_l2dis"]
[ext_resource type="PackedScene" uid="uid://r75keyyrbe3n" path="res://Scenes/hud.tscn" id="13_tr2ou"]
[ext_resource type="Texture2D" uid="uid://beq7yoe0bj7ac" path="res://Extra Art/battleback1.png" id="15_xu4du"]
[ext_resource type="Script" path="res://Scripts/dmgLabel.gd" id="17_ex08q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b0cyb"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="SystemFont" id="SystemFont_x0xp7"]
font_names = PackedStringArray("Eight Bit Dragon")

[sub_resource type="LabelSettings" id="LabelSettings_ujxwf"]
font = SubResource("SystemFont_x0xp7")

[sub_resource type="SystemFont" id="SystemFont_ty5vi"]
font_names = PackedStringArray("Eight Bit Dragon")

[sub_resource type="LabelSettings" id="LabelSettings_y41dw"]
font = SubResource("SystemFont_ty5vi")
font_size = 24

[sub_resource type="SystemFont" id="SystemFont_f57jh"]
font_names = PackedStringArray("Eight Bit Dragon")

[sub_resource type="SystemFont" id="SystemFont_jgyqk"]
font_names = PackedStringArray("Eight Bit Dragon")

[sub_resource type="SystemFont" id="SystemFont_b181c"]
font_names = PackedStringArray("Eight Bit Dragon")

[sub_resource type="SystemFont" id="SystemFont_naiff"]
font_names = PackedStringArray("Eight Bit Dragon")

[sub_resource type="SystemFont" id="SystemFont_6ymll"]
font_names = PackedStringArray("Eight Bit Dragon")

[sub_resource type="SystemFont" id="SystemFont_ckx2i"]
font_names = PackedStringArray("Eight Bit Dragon")

[sub_resource type="LabelSettings" id="LabelSettings_8eei3"]
font = SubResource("SystemFont_ckx2i")

[sub_resource type="SystemFont" id="SystemFont_ydqsj"]
font_names = PackedStringArray("Eight Bit Dragon")

[sub_resource type="LabelSettings" id="LabelSettings_qq61k"]
font = SubResource("SystemFont_ydqsj")
font_size = 24

[node name="BattleScene" type="Node2D" node_paths=PackedStringArray("player_char", "enemy_char")]
process_mode = 3
script = ExtResource("1_u86fr")
player_char = NodePath("CanvasLayer/player_battle")
enemy_char = NodePath("CanvasLayer/enemy_battle")

[node name="BattleMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_aknwo")
volume_db = 10.895

[node name="BossMusic" type="AudioStreamPlayer2D" parent="."]

[node name="GameOver" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_3h8lf")

[node name="Victory" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_l2dis")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Global" type="Node" parent="CanvasLayer"]
script = ExtResource("2_u6m27")

[node name="player_battle" parent="CanvasLayer" node_paths=PackedStringArray("opponent") instance=ExtResource("1_b71gs")]
position = Vector2(1530, 521)
is_player = true
combat_actions = [ExtResource("3_uefjw"), ExtResource("4_v045b"), ExtResource("5_554og"), ExtResource("6_285r8"), ExtResource("8_yu712")]
opponent = NodePath("../enemy_battle")
visual = ExtResource("3_epf44")
strength = 8
vitality = 10

[node name="enemy_battle" parent="CanvasLayer" node_paths=PackedStringArray("opponent") instance=ExtResource("1_b71gs")]
position = Vector2(434, 523)
cur_mana = 50
max_mana = 50
combat_actions = [ExtResource("4_v045b"), ExtResource("3_uefjw")]
opponent = NodePath("../player_battle")
strength = 0
vitality = 0
magic = 0
enemy = "Skeleton"

[node name="Panel" type="Panel" parent="CanvasLayer"]
offset_left = 401.0
offset_top = 697.0
offset_right = 1189.0
offset_bottom = 931.0
scale = Vector2(1.5, 1.5)
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_b0cyb")
script = ExtResource("9_m50kj")

[node name="STATS" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 383.0
offset_top = 12.0
offset_right = 440.0
offset_bottom = 35.0
text = "STATS"
label_settings = SubResource("LabelSettings_ujxwf")

[node name="HealthLabel" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 391.0
offset_top = 40.0
offset_right = 582.0
offset_bottom = 74.0
text = "Health: 25/25"
label_settings = SubResource("LabelSettings_y41dw")

[node name="ManaLabel" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 595.0
offset_top = 40.0
offset_right = 750.0
offset_bottom = 74.0
text = "Mana: 25/25"
label_settings = SubResource("LabelSettings_y41dw")

[node name="Panel2" type="Panel" parent="CanvasLayer"]
offset_left = 401.0
offset_top = 697.0
offset_right = 781.0
offset_bottom = 931.0
scale = Vector2(1.5, 1.5)
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_b0cyb")

[node name="PlayerCombatActions" type="VBoxContainer" parent="CanvasLayer/Panel2"]
layout_mode = 0
offset_left = 41.0
offset_top = 34.0
offset_right = 339.0
offset_bottom = 214.0
script = ExtResource("9_x401x")
buttons = [NodePath("CombatAction"), NodePath("CombatAction2"), NodePath("CombatAction3"), NodePath("CombatAction4"), NodePath("CombatAction5")]

[node name="CombatAction" type="Button" parent="CanvasLayer/Panel2/PlayerCombatActions"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_f57jh")
theme_override_font_sizes/font_size = 23
text = "Slash (5 DMG)"
script = ExtResource("10_61c8a")

[node name="CombatAction2" type="Button" parent="CanvasLayer/Panel2/PlayerCombatActions"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_jgyqk")
theme_override_font_sizes/font_size = 23
text = "Slash (5 DMG)"
script = ExtResource("10_61c8a")

[node name="CombatAction3" type="Button" parent="CanvasLayer/Panel2/PlayerCombatActions"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_b181c")
theme_override_font_sizes/font_size = 23
text = "Slash (5 DMG)"
script = ExtResource("10_61c8a")

[node name="CombatAction4" type="Button" parent="CanvasLayer/Panel2/PlayerCombatActions"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_naiff")
theme_override_font_sizes/font_size = 23
text = "Slash (5 DMG)"
script = ExtResource("10_61c8a")

[node name="CombatAction5" type="Button" parent="CanvasLayer/Panel2/PlayerCombatActions"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_6ymll")
theme_override_font_sizes/font_size = 23
text = "Slash (5 DMG)"
script = ExtResource("10_61c8a")

[node name="SKILLS" type="Label" parent="CanvasLayer/Panel2"]
layout_mode = 0
offset_left = 12.0
offset_top = 12.0
offset_right = 73.0
offset_bottom = 35.0
text = "SKILLS"
label_settings = SubResource("LabelSettings_8eei3")

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
z_index = -5
position = Vector2(975, 534)
scale = Vector2(1.8, 1.8)
texture = ExtResource("15_xu4du")

[node name="dmgLabel" type="Panel" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -392.0
offset_top = 61.0
offset_right = 168.0
offset_bottom = 138.0
grow_horizontal = 2
scale = Vector2(1.5, 1.5)
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_b0cyb")
script = ExtResource("17_ex08q")

[node name="dmgText" type="Label" parent="CanvasLayer/dmgLabel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -106.5
offset_top = 21.0
offset_right = 106.5
offset_bottom = 55.0
grow_horizontal = 2
text = "You dealt 25 DMG!"
label_settings = SubResource("LabelSettings_qq61k")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HUD" parent="." instance=ExtResource("13_tr2ou")]

[connection signal="panel" from="CanvasLayer/Panel2/PlayerCombatActions/CombatAction" to="CanvasLayer/dmgLabel" method="_on_combat_action_panel"]
[connection signal="pressed" from="CanvasLayer/Panel2/PlayerCombatActions/CombatAction" to="CanvasLayer/Panel2/PlayerCombatActions/CombatAction" method="_on_pressed"]
[connection signal="panel" from="CanvasLayer/Panel2/PlayerCombatActions/CombatAction2" to="CanvasLayer/dmgLabel" method="_on_combat_action_panel"]
[connection signal="pressed" from="CanvasLayer/Panel2/PlayerCombatActions/CombatAction2" to="CanvasLayer/Panel2/PlayerCombatActions/CombatAction2" method="_on_pressed"]
[connection signal="panel" from="CanvasLayer/Panel2/PlayerCombatActions/CombatAction3" to="CanvasLayer/dmgLabel" method="_on_combat_action_panel"]
[connection signal="pressed" from="CanvasLayer/Panel2/PlayerCombatActions/CombatAction3" to="CanvasLayer/Panel2/PlayerCombatActions/CombatAction3" method="_on_pressed"]
[connection signal="panel" from="CanvasLayer/Panel2/PlayerCombatActions/CombatAction4" to="CanvasLayer/dmgLabel" method="_on_combat_action_panel"]
[connection signal="pressed" from="CanvasLayer/Panel2/PlayerCombatActions/CombatAction4" to="CanvasLayer/Panel2/PlayerCombatActions/CombatAction4" method="_on_pressed"]
[connection signal="panel" from="CanvasLayer/Panel2/PlayerCombatActions/CombatAction5" to="CanvasLayer/dmgLabel" method="_on_combat_action_panel"]
[connection signal="pressed" from="CanvasLayer/Panel2/PlayerCombatActions/CombatAction5" to="CanvasLayer/Panel2/PlayerCombatActions/CombatAction5" method="_on_pressed"]
